--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="unicode">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' crossorigin="anonymous">
+		    <link href="style.css" rel="stylesheet" type="text/css">
+
 			<script src="https://kit.fontawesome.com/464f84772d.js" crossorigin="anonymous"></script>
 
 		
