--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
 						<i class="fa-solid fa-phone"></i>
 						<a style="">8 926 820 23 86</a>
 					</div>
+			</div>
 
-				
+			<div id="menu_button_container">
+				<i class="fa-solid fa-bars"></i>
 			</div>
 
 		</div>
 	</body>
-
 </html>
