--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@
 						</div>
 					</div>
 
-					<div class="service_block" style="background-image: url('/home/unq/Desktop/21.jpeg')">
+					<div class="service_block" style="background-image: url('/21.jpeg')">
 						<div class="service_content_wraper">
 							<div class="service_content">Копка котлованов</div>
 						</div>
 					</div>
 
-					<div class="service_block" style="background-image: url('/home/unq/Downloads/12.jpeg')">
+					<div class="service_block" style="background-image: url('/12.jpeg')">
 						<div class="service_content_wraper">
 							<div class="service_content">Разработка грунта</div>
 						</div>
 
 					</div>
-						<div class="service_block" style="background-image: url('/home/unq/Downloads/111.jpg')">
+						<div class="service_block" style="background-image: url('/111.jpg')">
 							<div class="service_content_wraper">
 								<div class="service_content">Вывоз грунта</div>
 							</div>
 						</div>
 					
-					<div class="service_block" style="background-image: url('/home/unq/Downloads/snow.jpg')">
+					<div class="service_block" style="background-image: url('/snow.jpg')">
 						<div class="service_content_wraper">
 							<div class="service_content">Уборка снега</div>		
 						</div>
