--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' crossorigin="anonymous">
 		<script src="https://kit.fontawesome.com/464f84772d.js" crossorigin="anonymous"></script>
+		 <link href="style.css" rel="stylesheet" type="text/css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Anton&family=Kanit:wght@300&family=Oswald:wght@500&display=swap" rel="stylesheet" crossorigin="anonymous">
