--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 
-		<div id="header">
+		<div id="header" class="header">
 		
 			<div id="mst_wraper">
 				<div id="mst">
@@ -84,26 +84,26 @@
 						</div>
 					</div>
 
-					<div class="service_block" style="background-image: url('/21.jpeg')">
-						<div class="service_content_wraper">
+					<div class="service_block" style="background-image: url('/home/unq/Desktop/21.jpeg')">
+						<div class="service_content_wraper" style="background-image: url('/home/unq/Desktop/21.jpeg')">
 							<div class="service_content">Копка котлованов</div>
 						</div>
 					</div>
 
-					<div class="service_block" style="background-image: url('/12.jpeg')">
-						<div class="service_content_wraper">
+					<div class="service_block" style="background-image: url('/home/unq/Downloads/12.jpeg')">
+						<div class="service_content_wraper" style="background-image: url('/home/unq/Downloads/12.jpeg')">
 							<div class="service_content">Разработка грунта</div>
 						</div>
 
 					</div>
-						<div class="service_block" style="background-image: url('/111.jpg')">
-							<div class="service_content_wraper">
+						<div class="service_block" style="background-image: url('/home/unq/Downloads/111.jpg')">
+							<div class="service_content_wraper" style="background-image: url('/home/unq/Downloads/111.jpg')">
 								<div class="service_content">Вывоз грунта</div>
 							</div>
 						</div>
 					
-					<div class="service_block" style="background-image: url('/snow.jpg')">
-						<div class="service_content_wraper">
+					<div class="service_block" style="background-image: url('/home/unq/Downloads/snow.jpg')">
+						<div class="service_content_wraper" style="background-image: url('/home/unq/Downloads/snow.jpg')">
 							<div class="service_content">Уборка снега</div>		
 						</div>
 					</div>
@@ -168,22 +168,19 @@
 			<div id="contacts_title" class="block_title">Контакты</div>
 			
 				<div id="contacts_block">
-					<div id="map_wraper">
-						<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Яндекс Карты</a><a href="https://yandex.ru/maps/geo/rabochiy_posyolok_kalininets/53063530/?ll=36.976943%2C55.545729&utm_medium=mapframe&utm_source=maps&z=13" style="color:#eee;font-size:12px;position:absolute;top:14px;">Рабочий посёлок Калининец — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=36.976943%2C55.545729&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1MzA2MzUzMBKeAdCg0L7RgdGB0LjRjywg0JzQvtGB0LrQvtCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsINCd0LDRgNC-LdCk0L7QvNC40L3RgdC60LjQuSDQs9C-0YDQvtC00YHQutC-0Lkg0L7QutGA0YPQsywg0YDQsNCx0L7Rh9C40Lkg0L_QvtGB0ZHQu9C-0Log0JrQsNC70LjQvdC40L3QtdGGIgoNge0TQhUzPV5C&z=13" width="500" height="500" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 
-					</div>
 
 					<div id="contacts_wraper">
 							<div class="contacts_field_block">
-								<div>Телефон</div>
+								<div class="contacts_field_icon">Телефон</div>
 								<div class="contacts_field">
-									<i class="contacts_field_icon fa-solid fa-phone"></i>
+									<i class="contacts_field_icon fa-solid fa-mobile-retro"></i>
 									<div class="contacts_field_description">8 999 453 18 66</div>
 								</div>
 							</div>	
 
 						<div class="contacts_field_block">
-						<div>E-mail</div>							
+						<div class="contacts_field_icon">E-mail</div>							
 							<div class="contacts_field">
 									<i class="contacts_field_icon fa-solid fa-envelope"></i>
 									<div class="contacts_field_description">minitech@gmail.com</div>
@@ -191,13 +188,17 @@
 						</div>
 
 						<div class="contacts_field_block">	
-							<div>Наш офис</div>
+							<div class="contacts_field_icon">Наш офис</div>
 							<div class="contacts_field">
 									<i class="contacts_field_icon fa-solid fa-location-dot"></i>
 									<div class="contacts_field_description">Наро-Фоминский р-н, п. Калининец</div>
 							</div>
 						</div>
-						<div></div>
+					</div>
+
+										<div id="map_wraper">
+						<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Яндекс Карты</a><a href="https://yandex.ru/maps/geo/rabochiy_posyolok_kalininets/53063530/?ll=36.976943%2C55.545729&utm_medium=mapframe&utm_source=maps&z=13" style="color:#eee;font-size:12px;position:absolute;top:14px;">Рабочий посёлок Калининец — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=36.976943%2C55.545729&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1MzA2MzUzMBKeAdCg0L7RgdGB0LjRjywg0JzQvtGB0LrQvtCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsINCd0LDRgNC-LdCk0L7QvNC40L3RgdC60LjQuSDQs9C-0YDQvtC00YHQutC-0Lkg0L7QutGA0YPQsywg0YDQsNCx0L7Rh9C40Lkg0L_QvtGB0ZHQu9C-0Log0JrQsNC70LjQvdC40L3QtdGGIgoNge0TQhUzPV5C&z=13" width="650" height="510" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+
 					</div>
 			</div>
 		</div>
@@ -218,6 +219,7 @@
 			let title = document.getElementById('title_container');
 			let x1 = document.getElementById("x1");
 
+			let header = document.getElementById("header");
 			let block1 = document.getElementById('block1');
 			let block2 = document.getElementById('block2');
 			let block3 = document.getElementById('block3');
@@ -234,39 +236,51 @@
 
 			var cur = 0;
 
-			navs[0].addEventListener("click", function (e) {
-				block2.scrollIntoView({block: "start", behavior: "smooth"});
-			});
+			// navs[0].addEventListener("click", function (e) {
+			// 	block2.scrollIntoView({block: "end", behavior: "smooth"});
+			// });
 
-			navs[1].addEventListener("click", function(e){
-				block3.scrollIntoView({block: "start", behavior: "smooth"});
-			});
+			// navs[1].addEventListener("click", function(e){
+			// 	block3.scrollIntoView({block: "start", behavior: "smooth"});
+			// });
 
-			navs[2].addEventListener("click", function(e){
-				block4.scrollIntoView({block: "start", behavior: "smooth"});
-			});
+			// navs[2].addEventListener("click", function(e){
+			// 	block4.scrollIntoView({block: "start", behavior: "smooth"});
+			// });
 
-			navs[3].addEventListener("click", function(e){
-				block5.scrollIntoView({block: "start", behavior: "smooth"});
-			});
+			// navs[3].addEventListener("click", function(e){
+			// 	block5.scrollIntoView({block: "start", behavior: "smooth"});
+			// });
 
 let count = 0;
-			let scroll = function(ev){
+		// 	let scroll = function(ev){
 
-			ev.preventDefault();
+		// 	ev.preventDefault();
+		// 	// console.log(count+ '                      count');
+		// 	console.log(cur+'                   cur')
 
-			count+=1;
-		if(count >= 3 || count>=4 || count >=5 || count>=7 || count>=6){
-			if(ev.deltaY > 0 && cur !== 4){
-				cur+=1;
-			}else if(ev.deltaY < 0 && cur !== 0){
-				cur-=1;
-			}else{}
-			count=0;
-			arr[cur].scrollIntoView({block: "start", behavior: "smooth"});
-			setTimeout(function () {window.removeEventListener("mousewheel", scroll)},600)
-			setTimeout(function(){window.addEventListener("mousewheel",scroll,{passive:false})},600);
-		}
+		// 	if(cur === 0){
+		// 		// header.style.backgroundColor = "linear-gradient(60deg, transparent, rgba(0, 0, 0, 0.48))";
+		// 		header.classList.add("header");
+		// 		header.classList.remove("headerX");
+		// 	}else{
+		// 		header.classList.add("headerX");
+		// 		header.classList.remove("header");
+		// 	}
+
+		// 	count+=0.9;
+		// if( count>=3 || count >=5 || count>=15 || count>=6){
+		// 	if(ev.deltaY > 0 && cur !== 4){
+		// 		cur+=1;			count=0;
+
+		// 	}else if(ev.deltaY < 0 && cur !== 0){
+		// 		cur-=1;			count=0;
+
+		// 	}else{}
+		// 	arr[cur].scrollIntoView({block: "start", behavior: "smooth"});
+		// 	setTimeout(function () {window.removeEventListener("mousewheel", scroll)},150)
+		// 	setTimeout(function(){window.addEventListener("mousewheel",scroll,{passive:false})},160);
+		// }
 
 			
 
@@ -282,6 +296,11 @@ let count = 0;
 			},400);
 
 
+
+let block = document.querySelectorAll(".service_content_wraper");
+
+block.forEach((e)=>{e.addEventListener("mouseover",function(){e.style.scale = "1.1"})});
+block.forEach((e)=>{e.addEventListener("mouseleave",function(){e.style.scale= "1"})});
 		</script>
 	</body>
 </html>
