--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					</div>
 
 					<div class="service_block" style="background-image: url('/12.jpeg')">
-						<div class="service_content_wraper" style="background-image: url('/home/unq/Downloads/12.jpeg')">
+						<div class="service_content_wraper" style="background-image: url('/12.jpeg')">
 							<div class="service_content">Разработка грунта</div>
 						</div>
 
