--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		
 	</head>
 
-	<body>
-			<div id="above_header">
+	<body>		
+		<div id="above_header">
 				<div id="nav_callback_container">
 					<div   id="callback_button">Обратный звонок</div>
 
@@ -84,26 +84,26 @@
 						</div>
 					</div>
 
-					<div class="service_block" style="background-image: url('/21.jpeg')">
-						<div class="service_content_wraper" style="background-image: url('/21.jpeg')">
+					<div class="service_block" style="background-image: url('/home/unq/Desktop/21.jpeg')">
+						<div class="service_content_wraper" style="background-image: url('/home/unq/Desktop/21.jpeg')">
 							<div class="service_content">Копка котлованов</div>
 						</div>
 					</div>
 
-					<div class="service_block" style="background-image: url('/12.jpeg')">
-						<div class="service_content_wraper" style="background-image: url('/12.jpeg')">
+					<div class="service_block" style="background-image: url('/home/unq/Downloads/12.jpeg')">
+						<div class="service_content_wraper" style="background-image: url('/home/unq/Downloads/12.jpeg')">
 							<div class="service_content">Разработка грунта</div>
 						</div>
 
 					</div>
-						<div class="service_block" style="background-image: url('/111.jpg')">
-							<div class="service_content_wraper" style="background-image: url('/111.jpg')">
+						<div class="service_block" style="background-image: url('/home/unq/Downloads/111.jpg')">
+							<div class="service_content_wraper" style="background-image: url('/home/unq/Downloads/111.jpg')">
 								<div class="service_content">Вывоз грунта</div>
 							</div>
 						</div>
 					
-					<div class="service_block" style="background-image: url('/snow.jpg')">
-						<div class="service_content_wraper" style="background-image: url('/snow.jpg')">
+					<div class="service_block" style="background-image: url('/home/unq/Downloads/snow.jpg')">
+						<div class="service_content_wraper" style="background-image: url('/home/unq/Downloads/snow.jpg')">
 							<div class="service_content">Уборка снега</div>		
 						</div>
 					</div>
@@ -122,7 +122,7 @@
 
 				<div id="price_table">
 					<div class="price_table_header">
-						<div class="price_table_header_title"> Наименование услуги</div>
+						<div class="price_table_header_title"> Название услуги</div>
 						<div id="price_table_header_price">Цена</div>
 					</div>
 
@@ -284,7 +284,7 @@ let count = 0;
 
 			
 
-		//};
+		};
 			window.addEventListener("mousewheel",scroll,{passive:false}); 
 
 
